# nebo-office

./: .gitignore  Cargo.toml  Makefile  PLUGIN.md  README.md  SKILL.md  build.sh  plugin.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/docx/: Cargo.toml
crates/docx/src/: create.rs  inline.rs  lib.rs  relationships.rs  unpack.rs  validate_docx.rs
crates/docx/tests/: round_trip.rs
crates/office-core/: Cargo.toml
crates/office-core/src/: lib.rs  relationships.rs  units.rs  validation.rs  xml.rs  zip_utils.rs
crates/pptx/: Cargo.toml
crates/pptx/src/: create.rs  unpack.rs
crates/spec/: Cargo.toml
crates/spec/src/: lib.rs  pptx_types.rs  types.rs  validate.rs  xlsx_types.rs
crates/xlsx/: Cargo.toml
crates/xlsx/src/: create.rs  lib.rs  unpack.rs
skills/docx/: SKILL.md
skills/docx-advanced/: SKILL.md
skills/docx-headers-footers/: SKILL.md
skills/docx-images/: SKILL.md
skills/docx-lists/: SKILL.md
skills/docx-styles/: SKILL.md
skills/docx-tables/: SKILL.md
skills/pptx/: SKILL.md
skills/pptx-shapes/: SKILL.md
skills/pptx-themes/: SKILL.md
skills/xlsx/: SKILL.md
skills/xlsx-features/: SKILL.md
skills/xlsx-formatting/: SKILL.md
skills/xlsx-formulas/: SKILL.md
